Fix iOS overflow issue + compile assets

--- a/src/sass/molecules/_controls.scss
+++ b/src/sass/molecules/_controls.scss
@@ -4,6 +4,7 @@
 
 .controls {
     margin: 70px auto 0;
+    overflow: hidden;
     text-align: center;
 
     button {
